removed bug-fix.... it breaks the rest of the website

--- a/Code/RestaurantManagementSoftware/application/style/style.css
+++ b/Code/RestaurantManagementSoftware/application/style/style.css
@@ -347,7 +347,3 @@ thead tr.filter input {
 .menuheader .right .item {
     padding-right: 5px; 
 }
-
-.dataTables_wrapper {
-    z-index: -1;
-}
